tests/negative/comptime_continue_without_loop.ora
contract ComptimeContinueWithoutLoop {
    pub fn run() -> u256 {
        comptime {
            continue;
        }
        return 1;
    }
}
